2006-05-31  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/vaious: upgrade to new report interface

2006-05-31  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: call FilterEditor
	* src/FilterEditor/__init__.py: added
	* src/FilterEditor/_FilterEditor.py: moved from plugins, renamed
	* src/glade/rule.glade: filter editor changes
	* src/Makefile.am: change subdirs
	* src/FilterEditor/Makefile.am: added

2006-05-31  Alex Roitman  <shura@gramps-project.org>
	* src/PluginUtils/_PluginMgr.py: Import MODE_CLI.
	* src/ReportBase/_BookFormatComboBox.py: Adapt to changes.
	* src/Selectors/_SelectPerson.py (__init__): take track argument.
	* src/Editors/_EditFamily.py: Adapt to SelectPerson change.
	* src/Editors/_EditPersonRef.py (_select_person): Adapt to
	SelectPerson change.
	* src/ReportBase/_BareReportDialog.py: Use dbstata and uistate,
	convert to Managed window.
	* src/ReportBase/_ReportDialog.py: Use dbstate and uistate.
	* src/ReportBase/_DrawReportDialog.py: Use dbstate and uistate.
	* src/ReportBase/_TextReportDialog.py: Use dbstate and uistate.
	* src/ViewManager.py (make_report_callback): Use dbstate and uistate.

2006-05-30  Don Allingham  <don@gramps-project.org>
	* src/plugins/FilterEditor.py: start to bring into sync with
	code changes

2006-05-30  Alex Roitman  <shura@gramps-project.org>
	* various: break Report into a package.

2006-05-29  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DetDescendantReport.py: insert name keys for indexing.
	* src/plugins/DetAncestralReport.py: insert name keys for indexing.
	* src/plugins/FamilyGroup.py: print descriptions for events.
	* src/PluginUtils/_ReportUtils.py: handle no person error

2006-05-29  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditFamily.py (EditFamily.save): Typo.
	* configure.in: Set up for 2.1.5.

2006-05-28  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadXML.py (stop_event): Properly import birth and